samples/_failures_safe/1761537555_5a9d49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a4d8fca.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8a4d8fca.c:164:9: error: expected identifier at end of input
  164 |         if (tokenizer->
      |         ^~
./samples/SAFE/__tmp_8a4d8fca.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a4d8fca.c:164:9: error: expected declaration or statement at end of input
